# Change-Ledger

./: .gitignore  INTEGRATION-SPEC.md  LICENSE  README.md  TICKET-ATTRIBUTION-SPEC.md  costs-example.json  pyproject.toml
changeledger/: __init__.py  __main__.py  cli.py  cost.py  errors.py  models.py  output.py  report.py  rework.py  signals.py  source_models.py
changeledger/sources/: __init__.py  file.py  github_graphql.py
tests/: factories.py  test_alignment.py  test_architecture.py  test_inlined_dependency.py  test_loc_normalization.py  test_p1_fixes.py  test_pipeline_consolidation.py  test_pr_number.py  test_regressions.py
